--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     
     <div class="container">
-        
+        <div class="form-box">
+            <h1>Sign Up</h1>
+            <div class="underline"></div>
+            <div class="input-group">
+                <div class="input-field">
+                    <input type="text" placeholder="Name">
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
