--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="form-box">
             <h1>Sign Up</h1>
             <div class="underline"></div>
-            <div class="input-group">
+            <form class="input-group">
                 <div class="input-field">
                     <i class="fa-regular fa-user"></i>
                     <input type="text" placeholder="Name">
@@ -24,7 +24,8 @@
                     <i class="fa-solid fa-key"></i>
                     <input type="text" placeholder="Name">
                 </div>
-            </div>
+                <p>Password suggestions<a href="#"></a></p>
+            </form>
         </div>
     </div>
 
