--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                     <input type="text" placeholder="Name">
                 </div>
                 <p>Password suggestions <a href="#">Click Here!</a> </p>
+                <div class="btn-field">
+                    <button type="button">Sign up</button>
+                    <button type="button">Sign in</button>
+                </div>
             </form>
         </div>
     </div>
