--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Password suggestions <a href="#">Click Here!</a> </p>
                 <div class="btn-field">
                     <button type="button">Sign up</button>
-                    <button type="button">Sign in</button>
+                    <button type="button" class="disable">Sign in</button>
                 </div>
             </form>
         </div>
