--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </div>
                 <p>Password suggestions <a href="#">Click Here!</a> </p>
                 <div class="btn-field">
-                    <button type="button">Sign up</button>
-                    <button type="button" class="disable">Sign in</button>
+                    <button type="button" class="signupbtn">Sign up</button>
+                    <button type="button" class="disable signinbtn">Sign in</button>
                 </div>
             </form>
         </div>
