--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="form-box">
-            <h1>Sign Up</h1>
+            <h1 class="title">Sign Up</h1>
             <div class="underline"></div>
             <form class="input-group">
                 <div class="input-field">
                     <i class="fa-regular fa-user"></i>
-                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Name" class="namefield">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-at"></i>
