--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-at"></i>
-                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-key"></i>
-                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Password">
                 </div>
                 <p>Password suggestions <a href="#">Click Here!</a> </p>
                 <div class="btn-field">
