--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <i class="fa-solid fa-key"></i>
                     <input type="text" placeholder="Password">
                 </div>
-                <p>Password suggestions <a href="#">Click Here!</a> </p>
+                <p><span class="text">Password suggestions</span> <a href="#">Click Here!</a> </p>
                 <div class="btn-field">
                     <button type="button" class="signupbtn">Sign up</button>
                     <button type="button" class="disable signinbtn">Sign in</button>
